# mms2-plugify

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  plugify.pconfig  plugify.pconfig.in  plugify.vdf.in  plugify.wconfig
.github/workflows/: cmake-multiple-platform.yml  cmake-single-platform.yml
cmake/: linux.cmake  logger.cmake  metamod.cmake  plugify.cmake  shared.cmake  sourcesdk.cmake  windows.cmake
cmake/metamod/: configure_metamod.cmake  plugify.vdf.in  wizard.vdf.in
cmake/platform/: shared.cmake
configs/addons/metamod/: plugify.vdf
src/: mm_logger.cpp  mm_logger.h  mm_logger.hpp  mm_plugin.cpp  mm_plugin.h  mm_plugin.hpp  mm_vhook.cpp  mm_vhook.hpp
src/logger/: detailed.cpp  detailed.hpp  error.cpp  error.hpp  ilogging.hpp  message.cpp  message.hpp  scope.cpp  scope.hpp  throw_assert.cpp  throw_assert.hpp  warning.cpp  warning.hpp
sym/: exported_symbols.lds  version_script.lds
